# delamain

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  LICENSE  NOTICE  README.md  README.zh-CN.md  VERSION  config.toml.example  docker-compose.yml  pom.xml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.local  entrypoint.sh
docs/: architecture-reference.md  dev-guide.md  file-upload.md  mcp-tool-design-guide.md  prebaked-index.md
gateway/: main.py  pyproject.toml
gateway/src/: __init__.py  async_tasks.py  banner.py  busy_tracker.py  heap_config.py  logging_config.py  mcp_server.py  pagination_utils.py  types.py
gateway/src/auth/: __init__.py  mcp_auth.py
gateway/src/config/: __init__.py  config_loader.py
gateway/src/registry/: __init__.py  instance_registry.py
gateway/src/routing/: __init__.py  request_router.py
gateway/src/tools/: __init__.py  analysis_surface_tools.py  annotation_tools.py  class_tools.py  dataflow_tools.py  decompile_tools.py  diagnostics_tools.py  digest_tools.py  export_tools.py  file_management_tools.py  frida_tools.py  init_tools.py  instance_tools.py  refactor_tools.py  resource_tools.py  search_tools.py  security_tools.py  session_tools.py  string_literal_tools.py  task_tools.py  transfer_tools.py  workflow_tools.py  xrefs_tools.py
gateway/tests/: test_batch_class_source_pagination.py  test_heap_config.py  test_helpfulness_batch.py  test_init_tool.py  test_instance_id_validity.py  test_jadx_token_priority.py  test_memory_diagnostics_tool.py  test_registry_and_busy_tracker_fixes.py  test_release_contracts.py  test_request_router_timeout.py  test_smali_degradation_signal.py  test_transfer_proxy_routes.py  test_transfer_upload_url.py  test_wave2_resource_wiring.py  test_wave3_xref_ticket_and_decompile_mode.py  test_xref_timeout_guidance.py
gateway/tests/integration/: test_new_tools_live.py
scripts/: bump-jadx.sh  bump-version.sh
src/main/java/com/zin/delamain/: Main.java
src/test/java/com/zin/delamain/: MainWarmupLibraryFlagTest.java  (+1 more)
test-harness/: README.md  acme-obf.dex  mapping.txt  rules.pro  validate.py
test-harness/src/com/acme/demo/: CreditCard.java  CryptoUtils.java  PaymentProcessor.java  SecretKeeper.java
tests/: conftest.py  test_gateway_e2e.py  test_java_endpoints.py
tools/delamain-cli/: Cargo.toml  README.md
tools/delamain-cli/src/: main.rs  retry.rs
tools/jadx-upload/: Cargo.toml  README.md
tools/jadx-upload/src/: chunker.rs  client.rs  hasher.rs  main.rs
(+110 files in other folders)
