[project]
name = "delamain-gateway"
version = "20260723.3"
description = "delamain gateway — MCP server exposing the JADX Android decompiler to AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==3.4.4",
    "httpx==0.28.1",
    "tomli==2.4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/xjoker/delamain"
Repository = "https://github.com/xjoker/delamain"
Issues = "https://github.com/xjoker/delamain/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.0", "respx==0.23.1"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
delamain-gateway = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
pythonpath = ["."]
